# opokuml-geosight

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  full_notebook.ipynb  lambda_function.py  main.py  pyproject.toml  test.py
.streamlit/: config.toml
